[build-system]
requires = [
    "setuptools>=46.4.0",       # PEP-420 support, PEP-517/518 support, setup.cfg attr: support
    "wheel>=0.30.0",            # limited python api support
    "cython>=0.29.23,<3.0",
    'numpy==1.19.5; python_version < "3.10"',
    'numpy==1.21.4; python_version >= "3.10"',
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["tabu"]
omit = [
    "env/*",
    "*/tests/*",
    "tabu/src/*",
    "tabu/package_info.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
