[metadata]
name = dwave-tabu
version = attr: tabu.__version__
description = Optimized Tabu solver for QUBOs
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENSE
author = D-Wave Systems Inc.
author_email = tools@dwavesys.com
url = https://github.com/dwavesystems/dwave-tabu
project_urls =
    Documentation = https://docs.ocean.dwavesys.com/en/stable/docs_tabu/sdk_index.html
    Issue Tracker = https://github.com/dwavesystems/dwave-tabu/issues/
    Source Code = https://github.com/dwavesystems/dwave-tabu/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = tabu
python_requires = >=3.7
install_requires =
    dwave-samplers>=1.0.0

[aliases]
dists = clean --all sdist bdist_wheel
